# Android-App-for-steel-surface-defect-detection-based-on-YOLOv26

./: NCNN.ipynb  README.md  yolo26n.ipynb
.ipynb_checkpoints/: yolo26s-checkpoint.ipynb
yolo26apk/: README.md  gradle.properties  local.properties  local.properties.example  settings.gradle.kts
yolo26apk/app/: build.gradle.kts  proguard-rules.pro
yolo26apk/app/src/main/: AndroidManifest.xml
yolo26apk/app/src/main/cpp/: CMakeLists.txt  yolo26_ncnn_jni.cpp
yolo26apk/app/src/main/java/com/example/steeldefect/: Detection.kt  ImageUtils.kt  MainActivity.kt  NcnnYoloDetector.kt
yolo26apk/app/src/main/res/values/: strings.xml  themes.xml
yolo26apk/gradle/wrapper/: gradle-wrapper.properties
yolo26n/: data.yaml
yolo26n-tune/: data.yaml
yolo26n-tune/.ipynb_checkpoints/: yolo26n-tune-checkpoint.ipynb
yolo26n-tune/runs/detect/neu_det_tune/: best_hyperparameters.yaml  tune_results.csv
yolo26n-tune/runs/detect/train/: args.yaml  results.csv
yolo26n/runs/detect/train/: args.yaml  results.csv
yolo26s/: data.yaml
yolo26s-tune/: data.yaml
yolo26s-tune/.ipynb_checkpoints/: yolo26s-tune-checkpoint.ipynb
yolo26s-tune/runs/detect/neu_det_tune3/: best_hyperparameters.yaml  tune_results.csv
yolo26s-tune/runs/detect/train/: args.yaml  results.csv
yolo26s-tune/runs/detect/train/weights/best_ncnn_model/: metadata.yaml  model_ncnn.py
yolo26s-tune/train/train/: labels.cache
yolo26s-tune/valid/valid/: labels.cache
yolo26s/runs/detect/train/: args.yaml  results.csv
